# ethical-consumption

./: .bazelrc  .envrc  .gitignore  README.md  WORKSPACE  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-server.yml
scripts/: BUILD.bazel  dc  dc.sh  install.sh
server/: BUILD.bazel  Dockerfile  LocalSettings.php  docker-compose.yml  package-lock.json  package.json  tsconfig.json
server/data/: wiki_set_up.sql
server/src/: app.ts
