package(default_visibility=["//visibility:public"])

sh_binary(
    name = "dc",
    srcs = ["dc.sh"],
    data = [
        "//server:api",
        "//server:wiki",
        "//server:database",
        "//server:docker-compose.yml",
        "//server:data/wiki_set_up.sql",
        "//server:LocalSettings.php",
    ],
)