package(default_visibility=["//visibility:public"])
exports_files(["docker-compose.yml", "data/wiki_set_up.sql", "LocalSettings.php"], visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")

# Database container (mocking an external RDS instance, for example)
container_image(
    name = "database",
    base = "@psql//image",
)

# Mediawiki container set-up
container_run_and_commit(
    name = "wiki_base",
    image = "@semantic-mediawiki//image",
    # install postgres drivers
    commands = [
        "apt-get update",
        "apt-get install --no-install-recommends -y libpq-dev",
        "docker-php-ext-install pgsql",
        "apt-get clean",
        "rm -rf /var/lib/apt/lists/*",
    ],
)

# Wiki container
container_image(
    name = "wiki",
    base = ":wiki_base",
)
